[gd_scene load_steps=10 format=2]

[ext_resource path="res://OrangeStorm.gd" type="Script" id=1]
[ext_resource path="res://AbsorbArea.gd" type="Script" id=2]
[ext_resource path="res://Assets/asset package custom/particlePack_1.1/PNG (Transparent)/flare_01.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0.386719, 0, 1, 0.910156, 1, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 0.4
spread = 180.0
gravity = Vector3( 0, 0, 0 )
scale = 0.3
color_ramp = SubResource( 3 )

[sub_resource type="QuadMesh" id=5]

[sub_resource type="SphereShape" id=6]
radius = 0.377882

[node name="OrangeStorm" type="Spatial"]
script = ExtResource( 1 )

[node name="Particles" type="Particles" parent="."]
material_override = SubResource( 1 )
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 0.792157, 0.756863, 0.47451, 1 )
light_energy = 9.367
omni_range = 2.42712

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AbsorbArea" type="Area" parent="." groups=["Light"]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="AbsorbArea"]
shape = SubResource( 6 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="body_entered" from="AbsorbArea" to="." method="_on_AbsorbArea_body_entered"]
